adding assignment for format number excpetion